--- a/.env
+++ b/.env
@@ -1,9 +1,18 @@
 PORT=5000
 
+# # sql server CONSTS
+#     PSV_USER="PSV_dev"
+#     PSV_PWD ="14554fg%dd"
+#     PSV_SERVER= "cpo.nhmp.gov.pk"
+#     PSV_DB= "M3DB"
+#     PSV_PORT= 4414
+#     BASE_URL=http://localhost:5000
+
+
 # sql server CONSTS
-    PSV_USER="PSV_dev"
-    PSV_PWD ="14554fg%dd"
-    PSV_SERVER= "cpo.nhmp.gov.pk"
-    PSV_DB= "M3DB"
-    PSV_PORT= 4414
+    PSV_USER="admin"
+    PSV_PWD ="123456"
+    PSV_SERVER= "HUNDAL-PC"
+    PSV_DB= "psvDB"
+    # PSV_PORT= 
     BASE_URL=http://localhost:5000
