--- a/.env
+++ b/.env
@@ -14,5 +14,5 @@ PORT=5000
     PSV_PWD ="123456"
     PSV_SERVER= "HUNDAL-PC"
     PSV_DB= "psvDB"
-    # PSV_PORT= 
+    PSV_PORT= 1434
     BASE_URL=http://localhost:5000
