--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@ PORT=5000
     PSV_USER="admin"
     PSV_PWD ="123456"
     PSV_SERVER= "HUNDAL-PC"
-    PSV_DB= "psvDB"
+    PSV_DB= "psv_mis"
     PSV_PORT= 1434
     BASE_URL=http://localhost:5000
