driver and vehicles update and add code

--- a/.env
+++ b/.env
@@ -16,3 +16,12 @@ PORT=5000
     PSV_DB= "psv_mis"
     PSV_PORT= 1434
     BASE_URL=http://localhost:5000
+
+
+
+    # sql server CONSTS
+    # PSV_USER="admin"
+    # PSV_PWD ="hundal123456"
+    # PSV_SERVER= "137.59.225.7"
+    # PSV_DB= "psv_mis"
+    # PSV_PORT= 9034
